Update across workshop files

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
       <div class="container">
         <h3>JavaScript</h3>
         <p>
+           <div class="example-box">
+            <code>console.log(elements);</code>
+            </div>
         <a href="shapes.css">shape excersize js</a>
         </p>
       </div>
@@ -154,6 +157,8 @@
           </li>
           <li>Developer Inspector Tool in the browsers like Chrome and Mozilla</li>
           <li><a href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a></li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document">https://developer.mozilla.org/en-US/docs/Web/API/Document</a></li>
+          https://developer.mozilla.org/en-US/docs/Web/API/Document
           <li><a href="http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags">http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags</a></li>
         </ul>
       </div>
