--- a/shapes.html
+++ b/shapes.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-       <link rel="stylesheet" href="shapes.css" type="text/css">
-      <script src="shapes.js"></script>
-    </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="shapes.css" type="text/css">
+    <script src="shapes.js" type="text/javascript" async></script>
+  </head>
   <body onload="hideAllShapes(1,6);">
     <div class="container">
       <div class="navigation">
@@ -14,24 +14,26 @@
           <li><a href="#" onclick="showShape(4);">shape four</a></li>
           <li><a href="#" onclick="showShape(5);">shape five</a></li>
           <li><a href="#" onclick="showShape(6);">shape six</a></li>
+          <li><a href="#" onclick="setVisibiltiyClass('shapes','hidden');">hide all</a></li>
+          <li><a href="#" onclick="setVisibiltiyClass('shapes','visible');">show all</a></li>
         </ul>
-       </div>
-    <div>
-    <div class="container">
-      <div id="shape1" class="circle">circle</div>
-      <div id="shape2" class="square">square</div>
-      <div id="shape3" class="triangle">triangle</div>
-      <div id="shape4" class="shape4">
-        <h1>heading tag</h1>
       </div>
-      <div id="shape5" class="shape5">
-        <p>paragraph tag</p>
-      </div>
-      <div id="shape6" class="shape6">
-        <div class="happy">
-          I am happy.
+      <div>
+        <div class="container">
+          <div id="shape1" class="circle shapes">circle</div>
+          <div id="shape2" class="square shapes">square</div>
+          <div id="shape3" class="triangle shapes">triangle</div>
+          <div id="shape4" class="shape4 shapes">
+            <h1>heading tag</h1>
+          </div>
+          <div id="shape5" class="shape5 shapes">
+            <p>paragraph tag</p>
+          </div>
+          <div id="shape6" class="shape6 shapes">
+            <div class="happy">
+              I am happy.
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
   </body>
 </html>
