Add gist for code snippets

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="workshop.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700|Roboto:400,700' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gist-embed/2.4/gist-embed.min.js"></script>
     <script src ="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.14/d3.js"></script>
+
     <script src="workshop.js"></script>
   </head>
   <body>
@@ -40,16 +43,7 @@
             <p>These are also called nodes. The parent node is the html tag. The child nodes are the head and body tags.</p>
           </div>
           <div class="column">
-            <div class="example-box">
-              <code>
-                &lt;html&gt;<br>
-                &nbsp;&lt;head&gt;
-                &nbsp;&lt;/head&gt;<br>
-                &nbsp;&lt;body&gt;
-                &nbsp;&lt;/body&gt;<br>
-                &lt;/html&gt;
-              </code>
-            </div>
+            <code data-gist-id="91a54b9bf17cd5fd4c49"></code>
           </div>
         </div>
 
@@ -71,19 +65,7 @@
         </div>
 
         <div class="row">
-          <div class="example-box">
-            <code>
-              &lt;html&gt;<br>
-              &nbsp;&lt;head&gt;<br>
-              &nbsp;&nbsp;&lt;link rel="stylesheet" href="workshop.css" type="text/css"&gt;<br>
-              &nbsp;&nbsp;&lt;script src="workshop.js" type="text/javascript"
-              async&gt;&lt;/script&gt;<br>
-              &nbsp;&lt;/head&gt;<br>
-              &nbsp;&lt;body&gt;
-              &nbsp;&lt;/body&gt;<br>
-              &lt;/html&gt;
-            </code>
-          </div>
+            <code data-gist-id="25f5d1d5a3d0c67a5283"></code>
         </div>
 
         <div class="row">
@@ -99,23 +81,7 @@
           </div>
 
           <div class="column">
-            <div class="example-box">
-              <code>
-                &lt;html&gt;<br>
-                &nbsp;&lt;head&gt;
-                &lt;/head&gt;<br>
-                &nbsp;&lt;body&gt;<br>
-                &nbsp;&nbsp;&lt;div&gt;&lt;/div&gt;<br>
-                &nbsp;&nbsp;&lt;p&gt;&lt;/p&gt;<br>
-                &nbsp;&nbsp;&lt;h1&gt;&lt;/h1&gt;<br>
-                &nbsp;&nbsp;&lt;ul&gt;&nbsp;<br>
-                &nbsp;&nbsp;&nbsp;&lt;li&gt;&lt;/li&gt;<br>&nbsp;
-                &lt;/ul&gt;<br>
-                &nbsp;&nbsp;&lt;a&gt;&lt;/a&gt;<br>
-                &nbsp;&lt;/body&gt;<br>
-                &lt;/html&gt;
-              </code>
-            </div>
+              <code data-gist-id="b114b67bd872db192e5f"></code>
           </div>
         </div>
 
