Gist styles, ids, and javscript info

--- a/index.html
+++ b/index.html
@@ -103,12 +103,49 @@
     <section id="javascript">
       <div class="container">
         <h3>JavaScript</h3>
-        <p>
-           <div class="example-box">
-            <code>console.log(elements);</code>
-            </div>
-        <a href="shapes.css">shape excersize js</a>
-        </p>
+        <p>Javascript can be client-side or server-side. We are going to play with client-side javascript. For websites, javascript can be used to manipulate the HTML DOM. A few language basics to get you started.</p>
+        <article id="variable" class="row">
+          <div class="column">
+          <h4>variable</h4>
+          <p></p>
+        </div>
+          <div class="column">
+            <code data-gist-id="39c10175bef50aec1060"></code>
+          </div>
+        </article>
+
+        <article id="function" class="row">
+          <div class="column">
+          <h4>function</h4>
+        </div>
+          <div class="column">
+            <code data-gist-id="e14484d2b45c0f6673a9"></code>
+          </div>
+        </article>
+
+         <article id="document" class="row">
+          <div class="column">
+          <h4>Accessing the elements in the html document</h4>
+          <p></p>
+        </div>
+          <div class="column">
+            <code data-gist-id="873fd2c9812bde0bd07a"></code>
+          </div>
+        </article>
+
+        <article id="js-debugging" class="row">
+          <div class="column">
+          <h4>simple debugging</h4>
+          <p></p>
+        </div>
+          <div class="column">
+            <code data-gist-id="d602108b5f2cc330a19d"></code>
+          </div>
+        </article>
+        
+        <div class="row">
+          <p><a href="shapes.css">shape excersize js</a></p>
+        </div>
       </div>
     </section>
 
