--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
           <h4>2: DOM </h4>
           The Document Object Model is a programming interface for HTML, XML and SVG documents. It provides a structured representation of the document (a tree) and it defines a way that the structure can be accessed from programs so that they can change the document structure, style and content.
         </div>
+         <div class="row">
+          <h4>3: tag </h4><p>
+          The tag is label wraps the content for the page. 
+          <p>
+            <code>&lt;body&gt;</code> and <code>&lt;/body&gt;</code> are tags.
+          </p>
+          <p> 
+            <code>&lt;div&gt;</code> and <code>&lt;/div&gt;</code> are tags.</p>
+        </div>
+        <div class="row">
+          <h4>3: attribute </h4>
+          Attributes are added to tags to describe more details about the element. <p> 
+            <code>&lt;div class="circle"&gt;</code></p> class="circle" is an attribute of the div tag.
+         </div>
+        <div class="row">
+          <h4>3: element </h4>
+           <code>&lt;div class="circle"&gt;Hi, I am a circle!&lt;/div&gt;</code> is an element. An element is the tag, attribute and the content inside the tags. An element is a node in the DOM. What is contained between the tags is what is displayed when the HTML is parsed by our browser. It is what is seen on the webpage.
+        </div>
         <div class="row">
           <div class="column">
             <h4>html, head and body tags</h4>
@@ -87,6 +105,8 @@
 
         <div class="row">
           <p><a href="shapes.html">shape excersize html</a></p>
+          elements/tags we will look at:
+          <code data-gist-id="f1b96e440307e01b1675"></code>
         </div>
       </div>
     </section>
@@ -96,6 +116,8 @@
         <h3>Cascading Style Sheets</h3>
         <p>
         <a href="shapes.css">shape excersize css</a>
+        We will look at:
+        <code data-gist-id="99532e80ff2b399dd050"></code>
         </p>
       </div>
     </section>
@@ -144,7 +166,10 @@
         </article>
         
         <div class="row">
-          <p><a href="shapes.css">shape excersize js</a></p>
+          <p><a href="shapes.js">shape excersize js</a></p>
+           We will look at:
+        <code id="look-at-js" data-gist-id="15553e5d7445f6fa11a0
+"></code>
         </div>
       </div>
     </section>
@@ -163,6 +188,9 @@
           <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document">https://developer.mozilla.org/en-US/docs/Web/API/Document</a></li>
           https://developer.mozilla.org/en-US/docs/Web/API/Document
           <li><a href="http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags">http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags</a></li>
+          http://www.w3schools.com/colors/colors_picker.asp
+http://www.w3schools.com/colors/colors_hex.asp
+http://www.w3schools.com/colors/colors_crayola.asp
         </ul>
       </div>
     </section>
