Add workshop header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <body>
     <header>
       <div class="container">
+           <h2>Women in CS Workshop at <a href="http://www.lanetech.org/">Lane Tech </a></h2>
         <h1>Introduction to HTML, CSS and JavaScript</h1>
         <h2>(and a few principles of clean code and software quality)</h2>
+
         <ol>
           <li>Expressive names for variables, functions, or classes</li>
           <li>Short functions that do one thing and one thing only</li>
@@ -45,12 +47,12 @@
             <code>&lt;div&gt;</code> and <code>&lt;/div&gt;</code> are tags.</p>
         </div>
         <div class="row">
-          <h4>3: attribute </h4>
+          <h4>4: attribute </h4>
           Attributes are added to tags to describe more details about the element. <p> 
             <code>&lt;div class="circle"&gt;</code></p> class="circle" is an attribute of the div tag.
          </div>
         <div class="row">
-          <h4>3: element </h4>
+          <h4>5: element </h4>
            <code>&lt;div class="circle"&gt;Hi, I am a circle!&lt;/div&gt;</code> is an element. An element is the tag, attribute and the content inside the tags. An element is a node in the DOM. What is contained between the tags is what is displayed when the HTML is parsed by our browser. It is what is seen on the webpage.
         </div>
         <div class="row">
