--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@
 
     <section id="resources">
       <div class="container">
+
         <h3>Resources</h3>
         <ul>
+          <li><a href="http://www.8thlight.com/">8thlight.com</a></li>
           <li><a href="http://www.colorhexa.com/">http://www.colorhexa.com/</a></li>
           <li><a href="https://www.google.com/fonts">https://www.google.com/fonts</a></li>
           <li>
@@ -224,12 +226,13 @@
           <li>Developer Inspector Tool in the browsers like Chrome and Mozilla</li>
           <li><a href="https://developer.mozilla.org/en-US/">https://developer.mozilla.org/en-US/</a></li>
           <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document">https://developer.mozilla.org/en-US/docs/Web/API/Document</a></li>
-          https://developer.mozilla.org/en-US/docs/Web/API/Document
           <li><a href="http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags">http://stackoverflow.com/questions/5641997/is-it-necessary-to-write-head-body-and-html-tags</a></li>
           <li><a href="http://www.w3schools.com/colors/colors_picker.asp">http://www.w3schools.com/colors/colors_picker.asp</a></i>
           <li><a href="http://www.w3schools.com/colors/colors_hex.asp">http://www.w3schools.com/colors/colors_hex.asp</a></i>
           <li><a href="http://www.w3schools.com/colors/colors_crayola.asp">http://www.w3schools.com/colors/colors_crayola.asp</a></i>
         </ul>
+
+        
       </div>
     </section>
   </body>
