--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         </article>
 
         <div class="row">
+          <p>Building a menu bar and its interactions. A menu bar is a design pattern that can be used over and over</p>
           <p><a href="shapes.js">shape excersize js</a></p>
           We will look at:
           <code id="look-at-js" data-gist-id="15553e5d7445f6fa11a0"></code>
@@ -209,8 +210,52 @@
           </div>
         </div>
   </article>
+  <article id="function-b" class="row">
+      <div class="row">
+            <p>A variable is a memory location attached to a symbolic name which holds a value. It is fundamental across computer languages. In this sense, it is a basic 'pattern' to recognize.</p> <p> Let's look at what the same variables look like in other languages.</p>
+      </div> 
+      <div class="row">
+           <div class="column">
+            <h5>java</h5>
+            <code data-gist-id="11466f8e7278f2c200c0"></code>
+           </div>
+         <div class="column">
+            <h5>ruby</h5>
+            <code data-gist-id="454b91fd4ef45128b5b3"></code>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <h5>clojure</h5>
+            <code data-gist-id="167f732107c419db4666"></code>
+          </div>
+          <div class="column">
+            <h5>scala</h5>
+            <code data-gist-id="9811c73f7f3fd9e8748b"></code>
+          </div>
+        </div>
+  </article>
 </div>
 </section>
+
+
+<article id="processing-form in code" class="row">
+      <div class="row">
+            <p>An other way to become familiar with patterns, a process or mehtod of implementation that is repeatable, is to play with algorithms that output form. Form and code.</p> 
+            <p> For that you can play with processing js using the  <a href="http://p5js.org/reference/#/p5/getURL">p5 library</a>. 
+            </p>
+            <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch html</a></p>
+             <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch css</a></p>
+              <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch js</a></p>
+
+
+      </div> 
+    
+  </article>
+
+</div>
+</section>
+
 
     <section id="resources">
       <div class="container">
