--- a/index.html
+++ b/index.html
@@ -212,33 +212,37 @@
   </article>
   <article id="function-b" class="row">
       <div class="row">
-            <p>A variable is a memory location attached to a symbolic name which holds a value. It is fundamental across computer languages. In this sense, it is a basic 'pattern' to recognize.</p> <p> Let's look at what the same variables look like in other languages.</p>
+            <p>Recognizing functions</p> <p> Let's look at what the same functions look like in other languages. What are the similarities? Differences?</p>
       </div> 
       <div class="row">
+         <h5>javascript</h5>
+        <code data-gist-id="83220bce887ea37b3c1c"></code>
+  
            <div class="column">
             <h5>java</h5>
-            <code data-gist-id="11466f8e7278f2c200c0"></code>
+            <code data-gist-id=""></code>
            </div>
          <div class="column">
             <h5>ruby</h5>
-            <code data-gist-id="454b91fd4ef45128b5b3"></code>
+            <script src="https://gist.github.com/kzkaed/306c1eacce20bf1dfa38.js"></script>
           </div>
         </div>
         <div class="row">
           <div class="column">
             <h5>clojure</h5>
-            <code data-gist-id="167f732107c419db4666"></code>
+            <code data-gist-id=""></code>
           </div>
           <div class="column">
             <h5>scala</h5>
-            <code data-gist-id="9811c73f7f3fd9e8748b"></code>
+            <code data-gist-id=""></code>
           </div>
         </div>
-  </article>
-</div>
+  </article></div>
+
 </section>
 
-
+<section id="processing-js">
+<div class="container">
 <article id="processing-form in code" class="row">
       <div class="row">
             <p>An other way to become familiar with patterns, a process or mehtod of implementation that is repeatable, is to play with algorithms that output form. Form and code.</p> 
@@ -252,7 +256,6 @@
       </div> 
     
   </article>
-
 </div>
 </section>
 
