Add last of function-test code

--- a/index.html
+++ b/index.html
@@ -220,21 +220,21 @@
   
            <div class="column">
             <h5>java</h5>
-            <code data-gist-id=""></code>
+            <code data-gist-id="f59854ca7e59e9381238"></code>
            </div>
          <div class="column">
             <h5>ruby</h5>
-            <script src="https://gist.github.com/kzkaed/306c1eacce20bf1dfa38.js"></script>
+             <code data-gist-id="306c1eacce20bf1dfa38"></code>
           </div>
         </div>
         <div class="row">
           <div class="column">
             <h5>clojure</h5>
-            <code data-gist-id=""></code>
+            <code data-gist-id="6948d493df30b747fcdd"></code>
           </div>
           <div class="column">
             <h5>scala</h5>
-            <code data-gist-id=""></code>
+            <code data-gist-id="1289c9b299055d9b4f7e"></code>
           </div>
         </div>
   </article></div>
