--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
             <p>An other way to become familiar with patterns, a process or mehtod of implementation that is repeatable, is to play with algorithms that output form. Form and code.</p> 
             <p> For that you can play with processing js using the  <a href="http://p5js.org/reference/#/p5/getURL">p5 library</a>. 
             </p>
-            <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch html</a></p>
-             <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch css</a></p>
-              <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch/sketch.html">sketch js</a></p>
+            <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch.html">sketch html</a></p>
+             <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch.css">sketch css</a></p>
+              <p><a href="http://kzkaed.github.io/LaneTechWorkshop/sketch.js">sketch js</a></p>
 
 
       </div> 
