--- a/sketch.html
+++ b/sketch.html
@@ -1,23 +1,22 @@
 <html>
   <head>
-<script language="javascript" src="addons/p5.dom.js"></script>
+ <script language="javascript" src="addons/p5.dom.js"></script>
  <script language="javascript" src="addons/p5.sound.js"></script>
 
  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.22/addons/p5.dom.min.js"></script>
  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.22/addons/p5.sound.min.js"></script>
- <script language="javascript" type="text/javascript" src="p5.js"></script> 
-  <script language="javascript" type="text/javascript" src="sketch.js"></script> 
+ <script language="javascript" type="text/javascript" src="p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.22/addons/p5.sound.min.js"></script> 
 
   <link href="sketch.css" rel="stylesheet" type="text/css">
 
- 
+
  <style> body {padding: 0; margin: 0;} </style>
   </head>
 
   <body>
-   <h1>Processing JS </h1> 
+   <h1>Processing JS </h1>
    <h2> Sketches </h2>
  </body>
 </html>
