--- a/shapes.html
+++ b/shapes.html
@@ -20,6 +20,7 @@
       </div>
       <div>
         <div class="container">
+          <div class="cat"></div>
           <div id="shape1" class="circle shapes">circle</div>
           <div id="shape2" class="square shapes">square</div>
           <div id="shape3" class="triangle shapes">triangle</div>
